rename some traps

--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -160,7 +160,7 @@
           <p>Shiren's attack is greatly reduced when he has the Trapper status.<br>His attack strength nearly stops growing after level 3, and stops entirely after level 20.<br>To illustrate, <strong>Shiren's attack at level 99 in Halfway Well is lower than level 6 inside other dungeons.</strong><br>So you won't be able to reliably defeat monsters using regular attacks beyond the first few floors.<br>That said, it's still worth leveling up in this dungeon to increase max HP.</p>
           <p>Defeating enemies without using traps only provides 20% of the normal amount of experience points.<br>However, defeating monsters using traps provides 95% experience, or 75% if defeated using a Spoil Trap.<br>A monster stepping on a trap also provides 75% experience, so if you find a Sturdy Trap Statue early on,<br>you can easily reach level 99 near the beginning of the dungeon by chaining traps together.</p>
           <p>Other notes:</p>
-          <p>The amount of damage dealt for damage type traps like Rockfall Trap increases by 2% per level up.<br>Despite that, most traps except for Landslide Trap still don't deal enough damage to quickly defeat enemies.</p>
+          <p>The amount of damage dealt for damage type traps like Rockfall Trap increases by 2% per level up.<br>Despite that, most traps except for Rockslide Trap still don't deal enough damage to quickly defeat enemies.</p>
           <p>Shiren is immune to Statues effects inside this dungeon, as they affect enemy monsters instead.<br>For example, you can circle around an Ouch Statue to have it defeat a monster without Shiren taking damage.</p>
           <p>Monster Houses can be generated, but Special Monster Houses do not appear in this dungeon.</p>
           <p>You'll automatically clear the dungeon the first time you pick up a Trapper Bracelet found starting on 10F.<br>After the first clear, the game will prompt you whether you'd like to exit or not when you either<br>pick up a Trapper Bracelet, or insert or take out a Trapper Bracelet from a Storage Pot.<br>However, you won't be able to exit while inside a Golden Interval.</p>
@@ -184,13 +184,13 @@
           </pre>
           <h3 id="shield">Obtaining Food</h3>
           <p>Riceballs are only found in shops, so you'll have to be a little creative when it comes to obtaining food.</p>
-          <p>Lure a Nigiri Morph onto a Poison Arrow Trap, and then have it transform some items into Large Riceballs.<br>It's best to increase max fullness to 200% using this method, along with keeping some riceballs on hand for later.</p>
+          <p>Lure a Nigiri Morph onto a Poison Trap, and then have it transform some items into Large Riceballs.<br>It's best to increase max fullness to 200% using this method, along with keeping some riceballs on hand for later.</p>
           <p>You might come across a Riceball Statue, which causes monsters to drop a Riceball when they're defeated.</p>
           <p>As a last resort, you can use Spoil Traps to obtain Spoiled Riceballs, which should be eaten when there are no<br>enemies nearby, and ideally right after a level up to minimize the loss of experience if you get the level down side effect.</p>
           <h3 id="weapon">Leveling Shiren</h3>
           <p>Use Chain and One-Way traps to create a chain reaction that provides lots of experience in a short amount of time.<br>It's best to wait until you come across a room that has a Sturdy Trap Statue before setting all of your traps to level up.<br>Avoid setting traps at room entrances on floors where Piko Hammer family monsters appear.</p>
           <h4 id="weapon">Leveling Enemies</h4>
-          <p>You'll gain more experience by leveling up the target monster prior to having them step on traps.<br>Cranky Tank (2300), Gigahead (3150), Horse Emperor (3100) are all good early game options.<br>Disable the leveled up monster by having them step on Strip and Poison Arrow traps.</p>
+          <p>You'll gain more experience by leveling up the target monster prior to having them step on traps.<br>Cranky Tank (2300), Gigahead (3150), Horse Emperor (3100) are all good early game options.<br>Disable the leveled up monster by having them step on Strip and Poison traps.</p>
           <pre class="dungeon_diagram">
 
     S:Shiren  F:Fodder  M:Monster
@@ -243,14 +243,14 @@
     □□□□□        ■■■■■        ■■■■■
           </pre>
           <h3 id="shield">Obtaining Items Efficiently</h3>
-          <p>Use a combination of a Summon Trap, Trip Stone, and either a Landslide Trap or Landmine to finish the monster off.<br>Just be careful not to place the Landmine in a location that ends up destroying the dropped items.<br>Requires a Sturdy Trap Statue.</p>
+          <p>Use a combination of a Summon Trap, Trip Stone, and either a Rockslide Trap or Landmine to finish the monster off.<br>Just be careful not to place the Landmine in a location that ends up destroying the dropped items.<br>Requires a Sturdy Trap Statue.</p>
           <pre class="dungeon_diagram">
 
-    S:Summon  T:Trip  L:Landslide (Landmine)
+    S:Summon  T:Trip  R:Rockslide (Landmine)
     □□□□□□□
-    □□□L□□□  Throw an item at the Summon Trap.
+    □□□R□□□  Throw an item at the Summon Trap.
     □□□□□□□  A summoned monster will trip and drop an item,
-    □□□T□□□  and then the group will collapse from the Landslide.
+    □□□T□□□  and then the group will collapse from the Rockslide.
     □□□□□□□
     □□□S□□□  Use multiple Trip Stones / Chain Traps to improve efficiency.
     ■■■■■■■
@@ -308,7 +308,7 @@
             <dd>Turns a monster into a Spoiled Riceball, instantly defeating it.</dd>
             <dt>Landmine, Big Landmine</dt>
             <dd>Explosions instantly defeat all enemies in a 1 tile radius.<br>Great to use against floating enemies and Piko Hammer family monsters.<br>Recommended to use Landmines instead of Big Landmines to reduce the amount of damage Shiren takes.</dd>
-            <dt>Poison Arrow Trap</dt>
+            <dt>Poison Trap</dt>
             <dd>Lowers a monster's strength to 0.<br>Shiren can intentionally step on it to have poison arrows fly at Piko Hammer family monsters or floating enemies.</dd>
             <dt>Spring</dt>
             <dd>Use it like Warp Grass to jump out of Monster Houses, or to escape to another room when you're surrounded.</dd>
@@ -360,10 +360,10 @@
           <p>Shiren quickly struggles to defeat enemies on his own from about this floor range.<br>It's still possible to defeat enemies with around 5 attacks, but by 10F it will be nearly<br>impossible to defeat enemies using regular attacks in a decent amount of time.</p>
           <h3 id="dark_night_cavern">08~09F</h3>
           <p>Monsters include Boy Cart (8~9F), Ironhead (9~11F), Nigiri Morph (8~10F), and Gale (9~10F).</p>
-          <p>Lower Nigiri Morph's strength to 0 using a Poison Arrow Trap, and have it turn unneeded items into Large Riceballs.<br>Leave important items on the ground while you do this, and aim to increase max fullness to 200%.</p>
+          <p>Lower Nigiri Morph's strength to 0 using a Poison Trap, and have it turn unneeded items into Large Riceballs.<br>Leave important items on the ground while you do this, and aim to increase max fullness to 200%.</p>
           <p>You can collect Iron Arrows from a Boy Cart if you have a Wall Collapse Scroll.<br>Arrows don't deal much damage inside this dungeon, but can be used to check for monsters inside hallways.</p>
           <p>Level up a Boy Cart or Ironhead into a Cranky Tank or Gigahead for experience points.<br>Shiren can get by at around level 30 or so, but ideally you want to reach level 99 here using a Sturdy Trap Statue.<br>Shiren will have about 500 max HP at level 99, greatly reducing the risk of collapsing.</p>
-          <p>Gale appears from 9F, and serves as the final challenge for picking up a Trapper Bracelet on 10F and clearing the story.<br>Gale moves at double speed, and is immune to traps thanks to its floating element.<br>Have Shiren step on a Landmine or Poison Arrow Trap to dispose of them.</p>
+          <p>Gale appears from 9F, and serves as the final challenge for picking up a Trapper Bracelet on 10F and clearing the story.<br>Gale moves at double speed, and is immune to traps thanks to its floating element.<br>Have Shiren step on a Landmine or Poison Trap to dispose of them.</p>
           <h3 id="mountain_cave">10~19F</h3>
           <p>Trapper Bracelets can be found on every floor starting on 10F, so pick one up if you're ready to go home.<br>You can also pick one up and select stay, and then place it on the ground → pick it up again to return to the village later.<br>Note that the bracelet will take up an inventory slot that could be used for a useful item if you decide to carry it for later.</p>
           <p>Start prioritizing traps that can one-shot enemies like Spoil Traps and Landmines, because the<br>smaller damage dealing traps like Log, Arrow, and Rockfall traps won't be enough to defeat enemies soon.<br>Also collect traps to help with running away, such as Springs and Pitfalls.</p>
