--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -548,7 +548,7 @@
               <td class="seal_table_equipment">う</td>
               <td>×</td>
               <td>Scale Shield<br>Antidote Grass</td>
-              <td>Blocks strength loss from Scorpions, Poison Grass, and poison arrows. Cannot block Slug licks.<br>Scorpions only appear on 8F and 2~3F of the first Golden Interval,<br>so it's basically used to block strength loss from Poison Arrow Traps.<br>That said, the only way to recover strength in Shiren 2 is to eat Antidote Grass<br>or revive using Revival Grass, so it can be worthwhile to synthesize it.</td>
+              <td>Blocks strength loss from Scorpions, Poison Grass, and poison arrows. Cannot block Slug licks.<br>Scorpions only appear on 8F and 2~3F of the first Golden Interval,<br>so it's basically used to block strength loss from Poison Traps.<br>That said, the only way to recover strength in Shiren 2 is to eat Antidote Grass<br>or revive using Revival Grass, so it can be worthwhile to synthesize it.</td>
             </tr>
             <tr>
               <td class="seal_table_equipment">竜</td>
@@ -566,7 +566,7 @@
               <td class="seal_table_item">弟</td>
               <td>○</td>
               <td>Otogiriso</td>
-              <td>Restores 4 HP when you take damage. Rephrased, reduces the amount of damage you take by 4 points.<br>Quick way to increase your defense, and at least one 弟 seal should be used in your main shield.<br>Can be used with Water Pot or Poison Arrow Traps to weaken a monster's strength and recover HP.</td>
+              <td>Restores 4 HP when you take damage. Rephrased, reduces the amount of damage you take by 4 points.<br>Quick way to increase your defense, and at least one 弟 seal should be used in your main shield.<br>Can be used with Water Pot or Poison Traps to weaken a monster's strength and recover HP.</td>
             </tr>
             <tr>
               <td class="seal_table_scroll">眠</td>
@@ -663,7 +663,7 @@
             <dt>Antidote Grass</dt>
             <dd>Restores lost strength due to poison arrows, Slug licks, and Scorpion stings.<br>Be sure to eat one of these before you use Strength Grass so that you increase max strength.</dd>
             <dt>Sight Grass</dt>
-            <dd>Best to eat it at the beginning of a floor.<br>Use it on 9F to look for a Poison Arrow Trap, which can be used to lower Nigiri Morph's strength and obtain riceballs.<br>Can also be used to look for Pitfalls, or a Trip Stone if you have a Dragon Tile Bracelet and want to collect items.</dd>
+            <dd>Best to eat it at the beginning of a floor.<br>Use it on 9F to look for a Poison Trap, which can be used to lower Nigiri Morph's strength and obtain riceballs.<br>Can also be used to look for Pitfalls, or a Trip Stone if you have a Dragon Tile Bracelet and want to collect items.</dd>
           </dl>
           <h3 id="pot">Pot</h3>
           <dl>
@@ -1478,7 +1478,7 @@
                 <li>Throw a shield with at least 5 defense.</li>
                 <li>Throw a Storage Pot with enough items inside to deal 5 damage.</li>
                 <li>Throw 5 items that can damage it.</li>
-                <li>Use traps. Poison Arrow Trap will lower its strength to 0. Landmines will defeat it, but you won't gain experience.</li>
+                <li>Use traps. Poison Trap will lower its strength to 0. Landmines will defeat it, but you won't gain experience.</li>
                 <li>Use an Explosion or Bomber statue to defeat it. However, you won't gain experience.</li>
                 <li>Throw grass at it, or eat a grass item next to it in hopes of it being Swift, Dragon, or Flame grass, Talking Seed, etc.</li>
                 <li>Read a scroll. Place it on the ground to check for Sanctuary Scroll first,<br>and then read it when Cave Mamel is next to you in case it's a Fear Scroll.</li>
@@ -1551,8 +1551,8 @@
           <h4 id="floor_9_12_food">Food Related (Nigiri Morph + Mixer)</h4>
           <p>The reason to look forward to Nirigi Morph is for its ability to produce Large Riceballs.<br>Have it transform items like single arrows, Spoiled Riceballs, or other unneeded items.</p>
           <p>At the same time, you can syntheize items by throwing them at a Mixer.<br>Some like to secure a food source by synthesizing the 飯 seal onto a weapon by throwing a Large Riceball<br>they obtain from a Nigiri Morph, which provides a 4% chance for defeated monsters to drop a Riceball,<br>which can be stacked to increase the drop rate. (4%, 5%, 6%, ... up to 19% at 16 seals).</p>
-          <p>However, since monsters don't always use their special attacks, you'll likely need to be able to tank some hits.<br>The ideal method would be to eat Sight Grass and use a Poison Arrow Trap to drop their strength to 0.<br>Miss Staff can also be used, and if it's a Nigiri Morph, you can throw Poison Grass to lower its attack and slow it down.<br>If you don't have any of these items, you can try to transform one item at a time,<br>stepping in place to recover HP while you wait for the next monster.</p>
-          <p>Sight Grass is not only useful for finding Poison Arrow Traps, but also to reveal Pitfalls that send you to the next floor.<br>However, don't eat unidentified grasses to search for it unless Herb and Life Grass have already been identified.<br>If you don't have Sight Grass, you can swing your weapon inside rooms to check for traps one tile at a time.<br>Or if that's too much trouble, you can dash across rows of tiles to search for a Poison Arrow Trap.<br>Just keep in mind, you'll lose 1 strength if you step on one without a Scale Shield equipped.</p>
+          <p>However, since monsters don't always use their special attacks, you'll likely need to be able to tank some hits.<br>The ideal method would be to eat Sight Grass and use a Poison Trap to drop their strength to 0.<br>Miss Staff can also be used, and if it's a Nigiri Morph, you can throw Poison Grass to lower its attack and slow it down.<br>If you don't have any of these items, you can try to transform one item at a time,<br>stepping in place to recover HP while you wait for the next monster.</p>
+          <p>Sight Grass is not only useful for finding Poison Traps, but also to reveal Pitfalls that send you to the next floor.<br>However, don't eat unidentified grasses to search for it unless Herb and Life Grass have already been identified.<br>If you don't have Sight Grass, you can swing your weapon inside rooms to check for traps one tile at a time.<br>Or if that's too much trouble, you can dash across rows of tiles to search for a Poison Trap.<br>Just keep in mind, you'll lose 1 strength if you step on one without a Scale Shield equipped.</p>
           <p>If a Trader isn't present on the current floor, and you've either eaten Sight Grass or have checked for traps,<br>you can place important items on the ground to avoid having them turned into Large Riceballs while you explore.<br>Don't place them near Landmines or Pitfalls, though, since a Tiger Tosser may cause an accident.</p>
           <p>It's ideal to make riceballs and synthesize on 9F, because 10F has a set terrain pattern of either 8-rooms or 12-rooms,<br>making for very small room sizes and lots of hallways, along with new monsters that have stronger attacks.</p>
           <h4 id="floor_9_12_monsters">Monsters</h4>
@@ -1560,7 +1560,7 @@
           <p>Monsters begin to hit harder from 10F with the appearance of monsters like Ironhead, Golem, and Kengo (11~12F).<br>Either unequip your shield beforehand, or fight Kengo with your back against a wall to avoid losing your shield.</p>
           <p>Try to clear out Monster Houses when possible to obtain more items.<br>However, Special Monster Houses can appear starting on 12F, so avoid them if you see one.<br>Encountering a Porkton or Typhoon this early in the dungeon would ensure the end of your adventure.</p>
           <h4 id="floor_9_12_other">Other Tips</h4>
-          <p>Wooden Arrow Traps and Iron Arrow Traps only appear between 5~10F. Use them to collect arrows while you can.</p>
+          <p>Arrow Traps and Iron Arrow Traps only appear between 5~10F. Use them to collect arrows while you can.</p>
           <p>Try reading a Wall Collapse Scroll on 9F after you explore the map and defeat some monsters.<br>You might find a Golden Stairs, and you can also collect Iron Arrows from a Boy Cart (7~9F).<br>Eat Sight Grass to remove the risk of stepping on a Pitfall on the way to the Golden Stairs.<br>Prepare Large Riceballs using a Nigiri Morph before entering the Golden Interval to avoid collapsing from hunger.</p>
           <p>Mr. Helico makes an appearance on 10F and occasionally drops Happy Grass when defeated.<br>Don't eat the Happy Grass right away if you obtain one, but instead, throw it at another Mr. Helico<br>to level it up into a Mr. Gyro, which has a chance to drop Revival Grass when defeated.<br>Don't forget to assign a name to the unidentified Happy Grass or Revival Grass if you manage to obtain them.<br>If you have a Possession Staff, Happy Grass can also be used to level up Kengo, allowing you to obtain more equipment.</p>
           <p>Taishodon appears between 10~12F. If you have a Grass Tosser, go ahead and insert Strength Grass<br>or Happy Grass and swing it at a Taishodon to have it reflect the magic bolt back at Shiren.<br>Don't forget to eat a Boost Grass beforehand, if you happen to have one on hand.</p>
@@ -1586,11 +1586,11 @@
             <dt>Necessary Items</dt>
             <dd>
               Razor Wind or a weapon with the 三 seal.<br>
-              Poison Arrow Trap to lower Schubell's strength to 0.<br>
+              Poison Trap to lower Schubell's strength to 0.<br>
               Pickaxe or Cannonballs to shape the terrain.
             </dd>
           </dl>
-          <p>Hit Schubell with a Poison Arrow Trap between 15~19F, and lure it into a room with a dead end.<br>Then dig out a wall as shown below, and simply defeat the summoned monsters.<br>It's best to do this between 16~18F where there are fewer monsters with dangerous abilities.</p>
+          <p>Hit Schubell with a Poison Trap between 15~19F, and lure it into a room with a dead end.<br>Then dig out a wall as shown below, and simply defeat the summoned monsters.<br>It's best to do this between 16~18F where there are fewer monsters with dangerous abilities.</p>
           <pre class="dungeon_diagram">
 
     ■■■■■■■■■
@@ -6094,7 +6094,7 @@
                 <li>Dragon Killer and Dragon Shield are exclusive to Golden Intervals.</li>
               </ul>
             </li>
-            <li>Wooden Arrow Traps can be generated, meaning they can be used to replenish arrows.</li>
+            <li>Arrow Traps can be generated, meaning they can be used to replenish arrows.</li>
           </ul>
           <h3>First (6~10F, Return 11F)</h3>
           <p>It's rare to find Wall Collapse Scrolls this early in the dungeon, so you're unlikely to visit this Golden Interval.<br>That said, if you do get lucky, be sure to explore the entire map on each floor to collect all items.</p>
