--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -65,7 +65,7 @@
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_wooden_arrow.png" alt="Trap"></td>
-            <td>Wooden Arrow Trap</td>
+            <td>Arrow Trap</td>
             <td>5</td>
             <td>A Wooden Arrow comes from the right side of the<br>direction the character is facing, dealing 5 damage.<br>Can be avoided using a Dodge Shield or Reflect Shield.<br>The arrow can be picked up if dodged or reflected at a wall.<br>The arrow will pierce through walls until it hits something.</td>
             <td>10%</td>
@@ -79,7 +79,7 @@
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_poison_arrow.png" alt="Trap"></td>
-            <td>Poison Arrow Trap</td>
+            <td>Poison Trap</td>
             <td>3~6</td>
             <td>A poison arrow comes from the right side of the direction the<br>character is facing, dealing 3~6 damage and lowering their strength.<br>Can be avoided using a Dodge Shield or Reflect Shield.<br>The arrow cannot be picked up if dodged or reflected at a wall,<br>and cannot be swallowed by a Mixer family monster.<br>The arrow will pierce through walls until it hits something.<br><br>Shiren or Ally: Lowers strength by 1 point.<br>Monster: Lowers strength to 0, making regular attacks deal 1 damage.</td>
             <td>10%</td>
