see if this updates github pages

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -27,7 +27,7 @@
           <tr>
             <td><img src="/shiren2/image/statue/ouch.png" alt="statue"></td>
             <td>Ouch Statue</td>
-            <td></td>
+            <td>Deals 18 damage to all characters within a 1 tile radius each turn.</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/statue/pierce.png" alt="statue"></td>
