try using item layout

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -17,16 +17,17 @@
       <div id="header" class="box header"></div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
-        <h2 class="page_heading">Statue Summary</h2>
+        <h2 class="page_heading">Statues</h2>
         <table>
           <tr>
-            <th>Image</th>
             <th>Name</th>
+            <th>Monster</th>
             <th>Info</th>
           </tr>
           <tr>
             <td><img src="/shiren2/image/statue/ouch.png" alt="statue"></td>
             <td>Ouch Statue</td>
+            <td>Shaaga</td>
             <td>Deals 18 damage to all characters within a 1 tile radius each turn.</td>
           </tr>
           <tr>
@@ -119,8 +120,18 @@
         <p>Text</p>
         <h3>Statue Locations</h3>
         <p>Table</p>
-        <h2>Statue Details</h2>
-        <h3>Scout Statue</h3>
+        <div class="item_details">
+          <h2>Statue Details</h2>
+          <h3>Scout Statue</h3>
+          <div class="detail-entry">
+            <div class="detail-section-1">
+            <p class="item_desc">
+              Text
+            </p>
+            <img src="/shiren2/image/statue/scout.png" alt="statue">
+            </div>
+          </div>
+        </div>
         <p>Text</p>
         <h3>Identify Statue</h3>
         <p>Text</p>
