trying to get a gap between image and paragraph

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -124,9 +124,9 @@
           <h2>Statue Details</h2>
           <h3>Scout Statue</h3>
           <div class="detail-entry">
-            <img src="/shiren2/image/statue/scout.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/scout.png" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc">
+            <p class="statue_desc">
               Lots of text for testing purposes, keep typing yada yada scout statues are great,<br>they let you see where items and monsters are on the floor.
             </p>
             </div>
