--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -25,94 +25,93 @@
             <th>Info</th>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/ouch.png" alt="statue"></td>
-            <td>Ouch Statue</td>
+            <td><a href="#ouch">Ouch Statue</a></td>
             <td>Shaaga</td>
             <td>Deals 18 damage to all characters within a 1 tile radius each turn.</td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/pierce.png" alt="statue"></td>
-            <td>Pierce Statue</td>
+            <td><a href="#pierce">Pierce Statue</a></td>
+            <td>Horse Ronin</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/riceball.png" alt="statue"></td>
-            <td>Riceball Statue</td>
+            <td><a href="#riceball">Riceball Statue</a></td>
+            <td>Nigiri Morph</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/gitan.png" alt="statue"></td>
-            <td>Gitan Statue</td>
+            <td><a href="#gitan">Gitan Statue</a></td>
+            <td>Gamarra</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/trip.png" alt="statue"></td>
-            <td>Trip Statue</td>
+            <td><a href="#trip">Trip Statue</a></td>
+            <td>Dosukoi</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/10_damage.png" alt="statue"></td>
-            <td>10 Damage Statue</td>
+            <td><a href="#10_damage">10 Damage Statue</a></td>
+            <td>Mamel</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/identify.png" alt="statue"></td>
-            <td>Identify Statue</td>
+            <td><a href="#identify">Identify Statue</a></td>
+            <td>N'dubba</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/bomber.png" alt="statue"></td>
-            <td>Bomber Statue</td>
+            <td><a href="#bomber">Bomber Statue</a></td>
+            <td>Droplet Ninja</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/gravity.png" alt="statue"></td>
-            <td>Gravity Statue</td>
+            <td><a href="#gravity">Gravity Statue</a></td>
+            <td>Golem</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/explosion.png" alt="statue"></td>
-            <td>Explosion Statue</td>
+            <td><a href="#explosion">Explosion Statue</a></td>
+            <td>Patient Bag</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/hoarder.png" alt="statue"></td>
-            <td>Hoarder Statue</td>
+            <td><a href="#hoarder">Hoarder Statue</a></td>
+            <td>King Tusker</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/scout.png" alt="statue"></td>
-            <td>Scout Statue</td>
+            <td><a href="#scout">Scout Statue</a></td>
+            <td>Pumphantasm</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/stone_toss.png" alt="statue"></td>
-            <td>Stone Toss Statue</td>
+            <td><a href="#stone_toss">Stone Toss Statue</a></td>
+            <td>Porky</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/sleep.png" alt="statue"></td>
-            <td>Sleep Statue</td>
+            <td><a href="#sleep">Sleep Statue</a></td>
+            <td>Sheep Priest</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/knockback.png" alt="statue"></td>
-            <td>Knockback Statue</td>
+            <td><a href="#knockback">Knockback Statue</a></td>
+            <td>Stone Beast</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/no_magic.png" alt="statue"></td>
-            <td>No Magic Statue</td>
+            <td><a href="#no_magic">No Magic Statue</a></td>
+            <td>Escargon</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/decoy.png" alt="statue"></td>
-            <td>Decoy Statue</td>
+            <td><a href="#decoy">Decoy Statue</a></td>
+            <td>Snacky</td>
             <td></td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/statue/sturdy_trap.png" alt="statue"></td>
-            <td>Sturdy Trap Statue</td>
+            <td><a href="#sturdy_trap">Sturdy Trap Statue</a></td>
+            <td>Traproid</td>
             <td></td>
           </tr>
         </table>
@@ -122,51 +121,133 @@
         <p>Table</p>
         <div class="item_details">
           <h2>Statue Details</h2>
-          <h3>Scout Statue</h3>
+          <h3 id="scout">Scout Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/scout.png" alt="statue">
             <div class="detail-section-1">
-            <p class="statue_desc">
-              Lots of text for testing purposes, keep typing yada yada scout statues are great,<br>they let you see where items and monsters are on the floor.
-            </p>
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="identify">Identify Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/identify.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="10_damage">10 Damage Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/10_damage.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="knockback">Knockback Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/knockback.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="decoy">Decoy Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/decoy.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="ouch">Ouch Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/ouch.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="stone_toss">Stone Toss Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/stone_toss.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="explosion">Explosion Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/explosion.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="hoarder">Hoarder Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/hoarder.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="sleep">Sleep Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/sleep.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="no_magic">No Magic Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/no_magic.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="pierce">Pierce Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/pierce.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="bomber">Bomber Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/bomber.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="trip">Trip Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/trip.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="gitan">Gitan Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/gitan.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="riceball">Riceball Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/riceball.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="sturdy_trap">Sturdy Trap Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/sturdy_trap.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
+            </div>
+          </div>
+          <h3 id="gravity">Gravity Statue</h3>
+          <div class="detail-entry">
+            <img class="img_statue" src="/shiren2/image/statue/gravity.png" alt="statue">
+            <div class="detail-section-1">
+            <p class="item_desc"></p>
             </div>
           </div>
         </div>
-        <p>Text</p>
-        <h3>Identify Statue</h3>
-        <p>Text</p>
-        <h3>10 Damage Statue</h3>
-        <p>Text</p>
-        <h3>Knockback Statue</h3>
-        <p>Text</p>
-        <h3>Decoy Statue</h3>
-        <p>Text</p>
-        <h3>Ouch Statue</h3>
-        <p>Text</p>
-        <h3>Stone Toss Statue</h3>
-        <p>Text</p>
-        <h3>Explosion Statue</h3>
-        <p>Text</p>
-        <h3>Hoarder Statue</h3>
-        <p>Text</p>
-        <h3>Sleep Statue</h3>
-        <p>Text</p>
-        <h3>No Magic Statue</h3>
-        <p>Text</p>
-        <h3>Pierce Statue</h3>
-        <p>Text</p>
-        <h3>Bomber Statue</h3>
-        <p>Text</p>
-        <h3>Trip Statue</h3>
-        <p>Text</p>
-        <h3>Gitan Statue</h3>
-        <p>Text</p>
-        <h3>Riceball Statue</h3>
-        <p>Text</p>
-        <h3>Sturdy Trap Statue</h3>
-        <p>Text</p>
-        <h3>Gravity Statue</h3>
-        <p>Text</p>
         <h3>Unused Statues</h3>
         <p>Table</p>
         <p>Text</p>
